[tool.poetry]
name = "dash_uploady"
version = "0.1.0"
description = "Uploady is a Dash component for uploading files to a Dash app. It is a wrapper around the Uploady component from React Uploady."
authors = ["Krystian Moras <krystianmoras@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
dash = ">=2.9.3"

[tool.poetry.dev-dependencies]
dash = {extras = ["dev", "testing"], version = "^2.8.1"}
pytest-cov = "^4.0.0"
black = "^22.12.0"
urllib3 = "^1.26.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
